fix logo on mobile

--- a/corpsey/static/css/small.less
+++ b/corpsey/static/css/small.less
@@ -95,8 +95,12 @@ nav.main {
 		display: none;
 	}
 	h1#textlogo {
-		padding: 4px 6px 0 57px;
+		padding: 4px 6px 0 20px;
 		text-align: center;
+        a {
+            padding: 0 0 0 57px;
+            margin-left: -20px;
+        }
 	}
 
 }
